--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,15 @@ sqlx = { version = "0.5", features = [
     "runtime-tokio-rustls",
     "postgres",
     "time",
+    "ipnetwork",
+    "uuid",
 ] }
 maud = { path = "maud/maud", features = ["rocket"] }
 thiserror = "1.0.31"
 dotenv = "0.15.0"
+regex = "1.5.6"
+once_cell = "1.12.0"
+ammonia = "3.2.0"
+md5 = "0.7.0"
+tokio = "1.19.1"
+image = "0.24.2"
