--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ ammonia = "3.2.0"
 md5 = "0.7.0"
 tokio = "1.19.1"
 image = "0.24.2"
+captcha = { version = "0.0.9", default-features = false }
+uuid = { version = "1.1.1", features = ["v4"] }
+rand = "0.8.5"
